# BAI-Project-2026-Winter

./: .gitignore  app.py  models.ipynb  project_guide.md  pyproject.toml
.github/workflows/: tests.yml
notebook/: machineLearning.ipynb
predictor/: pyproject.toml
src/predict/: __init__.py  __main__.py
