[project]
name = "predictore"
version = "0.1.0"
description = ""
authors = [
    {name = "angela718o-o",email = "leyijiang@ucla.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "predictore", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
